"fixed textbox and map on mobile"

--- a/src/style/ComponentStyle/Footer.css
+++ b/src/style/ComponentStyle/Footer.css
@@ -36,7 +36,7 @@
     }
     #map {
         margin-top: 6%;
-        margin-left: 8%;
+        margin-left: 6%;
         z-index: 1;
     }
     #left-column {
