--- a/src/style/PagesStyle/Contact.css
+++ b/src/style/PagesStyle/Contact.css
@@ -3,8 +3,15 @@
     margin-right: 15vh;
 }
 
+#project-details {
+    width: 100vh;
+} 
+
 @media (max-width:700px) {
     #input-form {
         margin-left: 4vh;
     }
+    #project-details {
+        width: 100%;
+    } 
 }
